@@ -1,5 +1,5 @@
-<p><a class="externallink" rel="nofollow" title="http://www.google.com" href="http://www.google.com">http://www.google.com</a></p>
-<p><a class="externallink" rel="nofollow" title="http://www.google.com" href="http://www.google.com">http://www.google.com</a></p>
-<p><a class="externallink" rel="nofollow" title="Caption" href="http://www.google.com">Caption</a></p>
-<p><a class="externallink" rel="nofollow" title="Multiple word caption" href="http://www.google.com">Multiple word caption</a></p>
-<p><a class="externallink" rel="nofollow" title="Bold caption" href="http://www.google.com"><b>Bold caption</b></a></p>
+<p><a class="externallink" rel="nofollow" href="http://www.google.com">http://www.google.com</a></p>
+<p><a class="externallink" rel="nofollow" href="http://www.google.com">http://www.google.com</a></p>
+<p><a class="externallink" rel="nofollow" href="http://www.google.com">Caption</a></p>
+<p><a class="externallink" rel="nofollow" href="http://www.google.com">Multiple word caption</a></p>
+<p><a class="externallink" rel="nofollow" href="http://www.google.com"><b>Bold caption</b></a></p>
