@@ -1,3 +1,3 @@
-<p><a class="externallink" rel="nofollow" title="http://example.com/files/test_image.jpg" href="http://example.com/files/test_image.jpg">http://example.com/files/test_image.jpg</a></p>
+<p><a class="externallink" rel="nofollow" href="http://example.com/files/test_image.jpg">http://example.com/files/test_image.jpg</a></p>
 <p>/wiki/en/ParserFunctions2</p>
-<p><a class="externallink" rel="nofollow" title="http://example.com/wiki/en/Sandbox" href="http://example.com/wiki/en/Sandbox">http://example.com/wiki/en/Sandbox</a></p>
+<p><a class="externallink" rel="nofollow" href="http://example.com/wiki/en/Sandbox">http://example.com/wiki/en/Sandbox</a></p>
