@@ -79,6 +79,8 @@ Bugfixes:
   * Interwiki links should not be rel="nofollow".
   * Links of the form "[[Help : Test]]" should link to the "Help:Test" page
     but output "Help : Test" as the link text, as per Mediawiki.
+  * Fix parsing of nested links such as
+    "[[Topic|caption with http://example.com link]]".
   * Wiki pre syntax (" pre <span>HTML</span") should allow HTML, although
     HTML pre ("<pre>pre <span>HTML</span></pre>") should not.
   * Return the resized image URL when images of the form
